[metadata]
name = nionswift-matplotlib
version = 0.1.0
author = Nion Software
author_email = swift@nion.com
description = Matplotlib backend for using matplotlib directly within Nion Swift.
long_description = file: README.rst, CHANGES.rst, LICENSE
url = https://github.com/nion-software/nionswift-matplotlib
license = Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find_namespace:
python_requires = ~=3.8
install_requires =
    matplotlib

[options.packages.find]
include =
    nion
    nion.matplotlib
